# vidtighten

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  build_app.sh  package-lock.json  package.json  pyproject.toml  run_web.py  start.sh  vitest.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
scripts/: bootstrap.sh
src/preprod/: __init__.py  __main__.py  audio.py  cli.py  corrections.py  fcpxml_common.py  fcpxml_cut.py  fcpxml_telop.py  japanese.py  llm_correct.py  probe.py  segments.py  session.py  transcribe.py  web.py  whisper_worker.py
src/preprod/static/: app.js  index.html
src/preprod/static/modules/: analysis.js  debug.js  export-dialog.js  export-module.js  history.js  llm-correct.js  preflight.js  settings.js  state.js  telop-overlay.js  transcript.js  transport.js  tx-search.js  utils.js  waveform.js  word-edit.js  zoom.js
tests/: benchmark_sample.py  test_app.py  test_audio.py  test_build_app_sh.py  test_corrections.py  test_fcpxml_common.py  test_fcpxml_cut.py  test_fcpxml_telop.py  test_japanese.py  test_llm_correct.py  test_probe.py  test_pyproject.py  test_segments.py  test_session.py  test_transcribe.py  test_web.py  test_web_llm.py  test_whisper_worker.py
tests/js/: dom_env_check.test.js  export-module.test.js  preflight.test.js  settings.test.js  state.test.js  telop-overlay.test.js  transcript-display-prefs.test.js  tx-search.test.js  utils.test.js  word-edit.test.js
